Cambios del pull request de psaavedra aunque no he aplicado todo ya que la parte de servicios y tipos de contraseñas creo que complicaria la aplicacion y prefiero que siga teniendo la sencillez de antes

--- a/README
+++ b/README
@@ -7,60 +7,48 @@ Password manager aims to be a simple but efective password database, but not
 a sharing password application, only for a reduced number of sysadmin or developers.
 
 My work as sysadmin, require to save a lot of passwords for installed applications
-from 100 to more of 1000. Since today i was using the tool named gallinero, from that
-Password Manager is based
-
-Now I have the challenge of migrating this application to django, plus add some functionality
-like send the required password the any email address
+from 100 to more of 1000.
 
 FEATURES:
 
  * Search for metadata
- * Password is only viewed if you click on the password field, if not, it is hidden
+ * Passwords are only visible by clicking on the password field, otherwise it is hidden from prying eyes
  * passwords are encripted on the database based on django.core.signing
  * filters on right size django bar, date, uploader and TOP LOGINS with facets for logins with at least 3 logins
 
 TODO:
  * send emails with new window and a django template
  * change passwords textbox to password box
- * installation instructions
+ * migration to django 1.6
  
 REQUIREMENTS:
  * Django 1.4
+ * you have a requirements.txt file to use with python pip
+	pip install -r requirements.txt
 
-###########
-HOWTO
-###########
+#######
+INSTALL
+#######
 
-DATABASE
+CREATE A MYSQL DATABASE
 mysql> create database passmanager;
 mysql> grant all privileges on passmanager.* to passmanager@localhost identified by 'passmanager';
 
-vmalaga@dbalinux:~/PasswordManager$ ./manage.py syncdb
-Creating tables ...
-Creating table auth_permission
-Creating table auth_group_permissions
-Creating table auth_group
-Creating table auth_user_user_permissions
-Creating table auth_user_groups
-Creating table auth_user
-Creating table django_content_type
-Creating table django_session
-Creating table django_admin_log
-Creating table passManager_passdb
+cd PasswordManager
+./manage.py syncdb
 
-You just installed Django's auth system, which means you don't have any superusers defined.
-Would you like to create one now? (yes/no): yes
-Username (leave blank to use 'vmalaga'): 
-E-mail address: vmalaga
-Password: 
-Password (again): 
-Superuser created successfully.
-Installing custom SQL ...
-Installing indexes ...
-Installed 0 object(s) from 0 fixture(s)
 
-STATICS
+STATIC FILES
 
-for production enviroments with apache or other webserver remember collectstatics
-vmalaga@dbalinux:~/PasswordManager$ ./manage.py collectstatic
+for production enviroments with apache or nginx webserver remember collectstatics 
+~/PasswordManager$ ./manage.py collectstatic
+
+Now run the app with the server from django
+
+/manage.py runserver
+Validating models...
+
+0 errors found
+Django version 1.4, using settings 'settings'
+Development server is running at http://127.0.0.1:8000/
+Quit the server with CONTROL-C.
